Update about section heading for clarity

--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
       <div class="about">
         <div class="about_heading_container">
           <h1 class="about_heading">
-            Efficient and Integrated <br />
-            Manufacturing Services
+            Efficient and Integrated Manufacturing Services
           </h1>
           <p class="about_subheading">
             Simplify operations with our efficient, quality-focused services
