--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
           </div>
         </div>
       </div>
-      <h1>Developer Mode</h1>
+      <h1> This Website is Under Developer Mode</h1>
     </div>
   </body>
 </html>
