Updated The Developer Mode

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -182,7 +182,14 @@
           </div>
         </div>
       </div>
-      <h1 style="display: flex; justify-content: center; padding-bottom: 20px">
+      <h1
+        style="
+          display: flex;
+          justify-content: center;
+          text-align: center;
+          padding-bottom: 20px;
+        "
+      >
         This Website is Under Developer Mode
       </h1>
     </div>
