Adding favicon in other pages

--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -10,10 +10,10 @@
     <link
       rel="icon"
       type="image/png"
-      href="https://ik.imagekit.io/rakiburcode/Xperts/lightning_bolt.png"
+      href="https://ik.imagekit.io/codespecia/Xperts/lightning_bolt.png"
     />
     <link rel="stylesheet" href="../../style.css" />
-    <link rel="stylesheet" href="./contact.css">
+    <link rel="stylesheet" href="./contact.css" />
     <title>Xperts.</title>
   </head>
   <body>
